- added a check to see if a game is ongoing before starting it - added twine and setup tools for building a package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.8"
 pandas = "^1.5.2"
 pytest = "^7.2.1"
+setuptools = "^67.2.0"
+twine = "^4.0.2"
 
 
 [build-system]
